<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">Demo 1 - Simple Dialog</string>
    <string name="d2">Demo 2 - Buttons Dialog</string>
    <string name="d3">Demo 3 - Text Input Dialog</string>
    <string name="enter">Enter Some Text</string>
    <string name="e3">Exercise 3</string>
    <string name="no1">Enter number 1</string>
    <string name="no2">Enter number 2</string>
    <string name="d4">Demo 4 - Datepicker Dialog</string>
    <string name="d5">Demo 5 - Timepicker Dialog</string>
</resources>